crates/swc_ecma_parser/tests/typescript-errors/multiple-specifiers/import/input.ts.stderr
error: Expected ',', got 'b'
 --> $DIR/tests/typescript-errors/multiple-specifiers/import/input.ts:1:12
  |
1 | import { a b c } from 'mod'
  |            ^

