crates/swc_ecma_parser/tests/typescript-errors/multiple-specifiers/import/input.ts
import { a b c } from 'mod'
